--- a/resources/rewards.yml
+++ b/resources/rewards.yml
@@ -1,4 +1,5 @@
 # Made by Terpz710 :p
+# Made with love <3
 
 # How to add items to the reward list:
 # All rewards MUST follow the layout shown below!
