--- a/.poggit.yml
+++ b/.poggit.yml
@@ -6,4 +6,8 @@ projects:
   RelicsPE:
     path: ""
     icon: pic.gif
+    libs: 
+      - src: "Paroxity/Commando/Commando"
+        version: "^3.2.0"
+    lint: false
 ...
